@@ -1,5 +1,6 @@
 Release CMTK-1.3.2:
 
+- Added: vtkxform tool can now read (and write) binary-coded VTK files.
 - Added: first utility classes (memory allocation and resource management,
     volume data transfer) for GPU computation using CUDA.
 - Testing: added test name to function mapper cmtk::TestFunctionMap to
